footer alignment fixed

--- a/src/app.css
+++ b/src/app.css
@@ -67,6 +67,8 @@ body {
 
 main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
